검색어가 이상할 때 null 나오는거 한 번 더 방어